# agent-poc-backend

./: .env.example  .gitignore  Dockerfile  README.en.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 21b5c34cb1bb_할일_메모_스키마_추가.py  4d9d6b69f1a2_google_calendar_events_owner_rls.py  5a9e5d1b7c3f_add_rls_policies_for_knowledge_tables.py  6c4c4f9a2b1e_add_rag_processing_fields_to_knowledge_.py  7e6c8d9f0a1b_add_rag_enable_flags_to_knowledge_tables.py  9f3c7b1a2d4e_remove_status_from_knowledge_sources.py  a1b2c3d4e5f6_벡터검색_제거_pgroonga_도입.py  ab3d2f85555f_add_server_default_for_knowledge_models_.py  b56ce40422f9_임베딩_벡터_외부_테이블_분리.py  b8e6622c4a0c_최초_스키마_생성.py  c12b9f8a7d3e_add_embedding_vector_to_google_calendar_events.py  d7f3a1b9c2e4_add_hnsw_index_on_google_calendar_events_embedding.py  e8a1c4d6f902_set_embedding_vector_dimension_1024.py  f2a4d3c1b8e9_google_calendar_events_datetime_and_indexes.py  f6282e63e5db_add_knowledge_models.py
app/api/common/: exception_handlers.py  helper.py  jwt_request.py  request_entity.py  response.py  response_entity.py
app/api/v1/: router.py
app/api/v1/agent/: chat.py  embedding.py  session.py
app/api/v1/auth/: login.py  refresh.py  verify.py
app/api/v1/knowledge/: delete.py  download.py  upload.py
app/core/: logging.py  patch.py
app/core/config/: environment.py  settings.py
app/features/agent/: entity.py  settings.py  state.py
app/features/agent/helpers/: graph_helpers.py  prompt.py
app/features/agent/memo/: memo_agent.py
app/features/agent/memo/prompts/: memo_prompt.py
app/features/agent/root/: root_graph.py
app/features/agent/root/nodes/: general_conversation.py  root_intent.py
app/features/agent/root/prompts/: analyze_intent.txt  general_conversation.txt  intent_context_hint.txt
app/features/agent/root/tools/: knowledge_tool_factory.py  knowledge_tool_registry.py
app/features/agent/schedules/: schedule_graph.py
app/features/agent/schedules/nodes/: classify_schedule_action.py  execute_tool.py  extract_information.py  final_response.py  intent_shift.py  user_confirmation.py
app/features/agent/schedules/prompts/: check_info.txt  check_info_add.txt  check_info_search.txt  classify_action.txt  detect_intent_shift.txt  extract_info.txt  extract_info_add.txt  (+8 more)
app/features/agent/todo/: todo_agent.py
app/features/auth/: auth_entity.py  auth_service.py
app/features/knowledge/: knowledge_file_service.py
app/features/knowledge/common/: chunk_persistence_service.py  knowledge_entity.py  metadata_service.py  text_source_service.py
app/features/knowledge/processing/: worker.py
app/features/knowledge/retrieval/: retrieval_entity.py  retrieval_service.py
app/features/llm/: embedding_service.py  llm_service.py
app/features/memos/: memo_db_service.py  memo_dto.py  memo_service.py
app/features/schedules/: schedule_db_service.py  schedule_dto.py  schedule_google_service.py  schedule_service.py
app/features/todos/: todo_db_service.py  todo_dto.py  todo_service.py
app/infrastructure/auth/: google.py  supabase.py
app/infrastructure/common/: exceptions.py  sse.py  sse_entity.py
app/infrastructure/google/: calendar_client.py
app/infrastructure/llm/client/: embedding_provider_factory.py  llm_provider_factory.py
app/infrastructure/llm/helpers/: error_handler.py  http_client.py  langfuse_callback.py
app/infrastructure/llm/providers/: anthropic_impl.py  custom_impl.py  gemini_impl.py  llm_provider_interface.py  openai_compatible_impl.py  openai_impl.py
app/infrastructure/models/: auth_user_model.py  event_embedding_model.py  google_calendar_event_model.py  knowledge_model.py  memo_model.py  todo_model.py
app/infrastructure/persistence/: checkpointer.py  database.py
app/workers/: rag_worker_main.py
scripts/: rag-backend.sh  rag-worker.sh  start.sh  static_analysis.sh  test.sh
tests/: README.md  conftest.py  test_embedding_config.py
tests/api/v1/: test_auth_api.py  test_chat_embedding_config.py  test_chat_error.py  test_chat_knowledge_tools_event.py  test_delete_session.py  test_embedding_api.py  test_knowledge_api.py
tests/features/agent/: test_agent_compilation.py  test_agent_schedules_logic.py  test_general_conversation_node.py  test_intent_shift_detection.py  test_knowledge_tool_factory.py  test_knowledge_tool_registry.py  test_memo_approval_tool.py  test_memo_search_tool.py  test_range_extraction.py  test_relative_extraction.py  test_repro_extraction.py  test_root_intent_routing.py  test_schedule_action_classification.py  test_todo_approval_tool.py  test_todo_prompt.py  test_todo_search_tool.py  test_tomorrow_extraction.py
tests/features/knowledge/: test_chunk_persistence_service.py  test_knowledge_parser_adapter.py  test_knowledge_service.py  test_odlh_processing_service.py  test_processing_service.py  test_retrieval_service.py
tests/features/memos/: test_memo_service.py
tests/features/schedules/: test_schedule_service.py
tests/features/todos/: test_todo_service.py
tests/mocks/: mock_llm_responses.py  mock_supabase.py
tests/unit/: test_rag_worker_main.py
tests/unit/core/: test_handlers.py  test_jwt_request.py  test_logging.py  test_response.py
tests/unit/helpers/: test_graph_helpers.py  test_langfuse_callback.py
tests/unit/infrastructure/persistence/: test_checkpointer.py
tests/unit/scripts/: test_transfer_knowledge_to_prod.py
tests/unit/services/: test_embedding_format.py  test_embedding_service.py  test_llm_service.py
tests/unit/services/auth/: test_google_auth.py  test_supabase_auth.py
tests/unit/services/llm/: test_anthropic.py  test_custom_impl.py  test_error_handler.py  test_factory.py  test_gemini.py  test_lazy_imports.py  test_openai.py
tests/utils/: mock_helpers.py
(+55 files in other folders)
