[project]
name = "agent-poc-backend"
version = "0.1.0"
description = "agent-poc-backend"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "cachetools==6.2.4",
    "fastapi[all]==0.128.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.10",
    "langfuse==2.60.10",
    "langfuse-langchain==2.60.10.1",
    "langgraph>=1.0.9",
    "langgraph-checkpoint-postgres>=3.0.4",
    "logfire>=4.25.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pyjwt==2.10.1",
    "pyright==1.1.408",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.21",
    "ruff>=0.9.4",
    "sentence-transformers==5.2.0",
    "sqlmodel>=0.0.37",
    "sse-starlette==3.2.0",
    "starlette==0.50.0",
    "supabase==2.27.2",
    "torch==2.9.1",
    "uvicorn==0.40.0",
]

[tool.ruff]
line-length = 160
indent-width = 2
target-version = "py312"
extend-exclude = ["alembic"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "RUF", # ruff-specific rules
  "N",   # pep8-naming
  "PL",  # pylint rules
  "S",   # flake8-bandit (security)
]
ignore = [
  "E501",    # line-too-long
  "PLR0913", # too-many-arguments
  "PLR2004", # magic-value-comparison
  "S105",     # hardcoded-password-string
  "S106",     # hardcoded-password-funcarg
  "S107",     # hardcoded-password-default
  "PLR0912", # too many branches
  "B008",    # do-not-perform-function-call-in-default-argument (FastAPI Depends 패턴)
  "E701",    # multiple-statements-on-one-line (if statement)
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "SLF001", "ANN", "PLC0415"]
"scripts/**/*" = ["T201"]
"app/core/config/environment.py" = ["N802"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pylint]
max-statements = 60

[tool.pyright]
include = ["main.py", "app", "tests"]
exclude = ["**/node_modules", "**/__pycache__", "alembic"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
extraPaths = []

[dependency-groups]
dev = [
    "freezegun==1.5.5",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "respx==0.22.0",
]

