[project]
name = "gplanner-ppa-api"
version = "0.1.0"
description = "GPlanner PPA API"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "cachetools==6.2.4",
    "fastapi[standard]==0.128.0",
    "httpx==0.28.1",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.3",
    "langchain-community==0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "langfuse-langchain==2.60.10.1",
    "langgraph>=1.0.9",
    "langgraph-checkpoint-postgres>=3.0.4",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pyjwt==2.10.1",
    "sqlmodel>=0.0.37",
    "supabase==2.27.2",
    "uvicorn==0.40.0",
]

[tool.uv.sources]
# langfuse와 langfuse-langchain이 같은 패키지 경로를 공유하므로, 호환 패키지만 단일 소스로 재설치되게 고정합니다.
langfuse-langchain = { url = "https://files.pythonhosted.org/packages/3b/3d/5affd1af5d4d3da6fb401fdda23acb472a2729731b127a5d98c2d3ae3315/langfuse_langchain-2.60.10.1-py3-none-any.whl" }

[tool.ruff]
line-length = 160
indent-width = 2
target-version = "py312"
extend-exclude = ["alembic"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "RUF", # ruff-specific rules
  "N",   # pep8-naming
  "PL",  # pylint rules
  "S",   # flake8-bandit (security)
]
ignore = [
  "E501",    # line-too-long
  "PLR0913", # too-many-arguments
  "PLR2004", # magic-value-comparison
  "S105",    # hardcoded-password-string
  "S106",    # hardcoded-password-funcarg
  "S107",    # hardcoded-password-default
  "PLR0912", # too many branches
  "B008",    # do-not-perform-function-call-in-default-argument (FastAPI Depends 패턴)
  "E701",    # multiple-statements-on-one-line (if statement)
  "PLC0415", # import-outside-toplevel
  "RUF001",  # 
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "SLF001", "ANN", "PLC0415"]
"scripts/**/*" = ["T201"]
"app/core/config/environment.py" = ["N802"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pylint]
max-statements = 60

[tool.pyright]
include = ["main.py", "app", "tests"]
exclude = ["**/node_modules", "**/__pycache__", "alembic"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
extraPaths = []

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "freezegun==1.5.5",
    "pyright==1.1.408",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "respx==0.22.0",
    "ruff>=0.9.4",
]
worker = [
    "opendataloader-pdf[hybrid]>=2.1.1",
]
